[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/RangedEnemyK.gd" type="Script" id=1]
[ext_resource path="res://assets/geometry.png" type="Texture" id=2]
[ext_resource path="res://scenes/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=4]
radius = 30.2035

[sub_resource type="CircleShape2D" id=3]
radius = 605.013

[sub_resource type="CircleShape2D" id=5]
radius = 43.0029

[node name="RangedEnemyK" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 321
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -0.5 )
shape = SubResource( 4 )

[node name="rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="rays"]
cast_to = Vector2( 0, 90 )

[node name="RayCast2D2" type="RayCast2D" parent="rays"]
rotation = 1.5708
cast_to = Vector2( 0, 90 )

[node name="RayCast2D3" type="RayCast2D" parent="rays"]
rotation = -3.14159
cast_to = Vector2( 0, 90 )

[node name="RayCast2D4" type="RayCast2D" parent="rays"]
rotation = 4.71239
cast_to = Vector2( 0, 90 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 3 )

[node name="shootCooldown" type="Timer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )

[connection signal="timeout" from="shootCooldown" to="." method="_on_shootCooldown_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="PlayerDetectionZone"]
[editable path="Hurtbox"]
